# project_bidbot

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: phase_a_login.yml
docs/: sheet_template.xlsx  개발노트.md
src/core/: pricing.py
src/markets/kream/: http.py  prices.py  sell_asks.py  session.py
src/sheets/: gsheet.py  models.py  schema.py
test/: README.md
test/core_test/: 01_pricing.py  _common.py
test/phase_a_kream_login/: kream_login.py  run_phase_a.py
test/sell_asks_test/: 01_목록_조회.py  02_시세_조회.py  03_등록.py  04_가격수정.py  05_삭제.py  README.md  _common.py
test/session_test/: test_session.py
test/sheets_test/: 01_read.py  02_write.py  03_safety_guard.py  04_models.py  README.md  _common.py
